nginx/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: your-namespace
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
